Adding new golang rewrite folder