@@ -17,8 +17,8 @@ public class Globals {
 
     public static Safelist HTML_SAFELIST = Safelist.basic();
 
-    public static final ExecutorService EXECUTOR = Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("thread-", 0L).factory());
-    public static final ExecutorService CPU_EXECUTOR = Executors.newCachedThreadPool(Thread.ofPlatform().name("thread-", 0L).factory());
+    public static final ExecutorService TP = Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("thread-", 0L).factory());
+    public static final ExecutorService CPU_BND_TP = Executors.newCachedThreadPool(Thread.ofPlatform().name("thread-", 0L).factory());
 
     public static final ObjectMapper JSON = new ObjectMapper();
 
